ensure one-of border has spacing above and below

--- a/less/schema.less
+++ b/less/schema.less
@@ -92,7 +92,7 @@
   border-bottom: .5em solid @one-of-color;
   border-left: .5em solid @one-of-color;
   border-right: .5em solid @one-of-color;
-  margin: 0 -1.5em;
+  margin: 1em -1.5em;
 
   .one-of-header {
     display: block;
